--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@eslint/js": "^9.29.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
