--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-     },
-     "include": ["src"]
-  }
+    }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
